Styles/styles.css
html
{
	--cos: cubic-bezier(0.3642,0,0.6358,1);
	height:100%;
	width: 100%;

	image-rendering: -moz-crisp-edges;
	image-rendering: -webkit-optimize-contrast;
	image-rendering: -webkit-crisp-edges;
	image-rendering: pixelated;
	image-rendering: crisp-edges;

	font-variant: small-caps;

	touch-action: none;
	
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

body
{
	height: 100%;
	width: 100%;
	margin:0 0;
	overflow: hidden;
	background-color: black;
	color: white;
	font-family: 'Press Start 2P', cursive;

	touch-action: none;
}

img 
{
	image-rendering: -moz-crisp-edges;
	image-rendering: -webkit-optimize-contrast;
	image-rendering: -webkit-crisp-edges;
	image-rendering: pixelated;
	image-rendering: crisp-edges;
}

div
{
	position: relative;
}

#face1
{
	flex-shrink: 0;
	margin: 8px;
	width: 14vh;
	height: 14vh;
	display: inline-block;
	/*background-color: #080808;*/
}

#face2
{
	flex-shrink: 0;
	margin: 8px;
	width: 38vh;
	height: 38vh;
	display: inline-block;
	/*background-color: #080808;*/
}

#notifier
{
	position: absolute;
	bottom: 16px;
	left: 16px;
	background-color: black;
	margin: 0;
	z-index: 9999;
}

#information
{
	position: fixed;
	line-height: 2;
	bottom: 8px;
	left: 8px;
	font-size: 0.5em;
	color: darkgrey;
}

#back-canvas
{
	height: 100%;
	width: 100%;
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	z-index: -2;
}

#content
{
	display: flex;
	flex-direction: row;
	align-items: flex-end;
	justify-content: space-evenly;

	position: absolute;
	/*bottom: 44vh; /*50vh*/
	/*left:  0;/*7%;*/
	/*right: 0;/*7%*/
	margin: 0 auto;
}

#content-canvas
{
	position: absolute;
	width: 100vw;
	height: 100vh;
	left: 0px;
	right: 0px;
	top: 0px;
	bottom: 0px;
	z-index: 6;
}

#cover
{
	z-index: 9999;
	position: absolute;
	left: 0px;
	right: 0px;
	top: 0px;
	bottom: 0px;
}

#battlebuttons
{
	position: absolute;
	top: 0px;
	left: 0px;
	bottom: 0px;
	right: 0px;
}

#lButtons
{
	display: flex;
	flex-direction: column;
	position: absolute;
	left: 32px;
	bottom: 16px;
	width: 224px;
	height:256px;
}

#main
{
}

#output1
{
	flex-grow: 1;
	text-align: left;
	margin: 8px;
}

#output2
{
	flex-grow: 1;
	text-align: left;
	margin: 8px;
	font-size: 2em;
}

#gameover
{
	display: flex;
	flex-direction: column; 
	justify-content: space-around;
	align-items: center;
}

#intro
{
}

#introoutput
{
	vertical-align: middle;
	text-align: center;
}

#rButtons
{
	display: flex;
	flex-direction: column;
	position: absolute;
	right: 16px;
	bottom: 16px;
	width: 224px;
	height:256px;
}

#hud
{
	display: flex;
	width: 100%;
	z-index:1;
}

#gamewindow
{
	margin: 0 auto;
	height: 100vh;
	width: calc(100vh * 1.5);
	overflow: hidden;
}

#back
{
	z-index: -1;
	height: 100%;
	position: absolute;
}

#fore
{
	height: 100%;
	position: absolute;
}

.box
{
	position: absolute;
	top:0px;
	left:0px;
	height: 100%;
	width: 100%;
}

.cursor
{
	z-index:10;
	height: calc(8px * 4);
	width: calc(8px * 4);
}

.dialogueBox
{
	display:flex;
	z-index: 10; 
	position: fixed; 
	width: calc((100vh * 1.5) - 16px);
}

.dialogueBox > #output
{
	text-align: left;
}

.flexcenterer
{
	display: flex;
	justify-content: center;
	align-items: center;
}

.inline-block
{
	display: inline-block;
}

#vcursor
{
	transform: rotateZ(90deg);
}

.bordered
{
	background-color: black;
	color: white;
	border-style: ridge;
	padding: 4px;
	border-radius: 2px;
	border-width: 4px;
	border-color: white;
	text-align: center;
}

.playerstat
{
	width: 100%;
	text-align: center;
}

.transition-position
{
	transition: left 1s, right 1s, top 1s, bottom 1s;
}

.big-text
{
	font-size: 2em;
	padding: 1em;
}

